<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Google Image Search</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_button">Search</string>
    <string name="search_query">Enter Search</string>
    <string name="title_activity_image_detail">ImageDetailActivity</string>
    <string name="title_activity_image_filter">ImageFilterActivity</string>
    <string name="image_size">Image Size</string>
    <string name="color_filter">Color Filter</string>
    <string name="image_type">Image Type</string>
    <string name="site_filter">Site Filter</string>
    <string name="save">Save</string>
    <string name="blue">blue</string>
    <string name="car">car</string>
    <string name="small">small</string>
</resources>