<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.codepath.gridimagesearch.ImageFilterActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/tvFilterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        android:text="Advanced Search Options"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/tvSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvFilterTitle"
        android:layout_below="@+id/tvFilterTitle"
        android:layout_marginTop="15dp"
        android:text="@string/image_size"
        android:textSize="17sp" />

    <Spinner
        android:id="@+id/spSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvSize"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvFilterTitle"
        android:layout_toRightOf="@+id/tvSize"
        android:entries="@array/size_array"
        android:prompt="@string/small" />

    <TextView
        android:id="@+id/tvColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvFilterTitle"
        android:layout_below="@+id/tvSize"
        android:layout_marginTop="15dp"
        android:text="@string/color_filter"
        android:textSize="17sp" />

    <Spinner
        android:id="@+id/spColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvColor"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvSize"
        android:layout_toRightOf="@+id/tvColor"
        android:entries="@array/color_array"
        android:prompt="@string/blue" />

    <TextView
        android:id="@+id/tvType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvFilterTitle"
        android:layout_below="@+id/tvColor"
        android:layout_marginTop="15dp"
        android:text="@string/image_type"
        android:textSize="17sp" />

    <Spinner
        android:id="@+id/spType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvType"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvColor"
        android:layout_toRightOf="@+id/tvType"         
        android:entries="@array/type_array"
        android:prompt="@string/car"/>

    <TextView
        android:id="@+id/tvSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvFilterTitle"
        android:layout_below="@+id/tvType"
        android:layout_marginTop="15dp"
        android:text="@string/site_filter"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/etSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvSite"
        android:layout_alignLeft="@+id/spColor"
        android:layout_alignParentRight="true"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etSite"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:onClick="onSave"
        android:text="@string/save" />

</RelativeLayout>